# partfs_progs

./: .gitignore  .gitmodules  LICENSE  README.md  ROADMAP.md  meson.build
lib/: crc32c.c  crc32c.h  meson.build  partfs.h
man/: meson.build  mkfs.part.8
mkfs/: geometry.c  geometry.h  group.c  group.h  inode.c  inode.h  io.c  io.h  journal.c  journal.h  main.c  meson.build  mkfs.h  mkfs_part.c  superblock.c  superblock.h
